--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,15 @@
 <section class="home" id="home">
 <h3>Hi There!</h3>
 <h1>I'm <span>GAHUZAMIRYANGO Jean De Deu</span></h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Distinctio deserunt aspernatur fugiat minus enim ullam repudiandae sint 
-    sed magnam tenetur!Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.
-    Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.
-    Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.Lorem ipsum dolor sit amet consectetur adipisicing 
-    Necessitatibus, at.</p>
+<p>Gahuzamiryango Jean de Dieu,
+    An experienced Developer, IT Consultant with a Bachelor’s degree in
+     Business and Information Technology from the University of Rwanda and a strong 
+     foundation in software development and ICT. Skilled in cloud-based systems, 
+     system administration, and operating systems. With one and a half years of 
+     professional experience at 
+     Social Unlimited Technology Company, I excel in solving complex technical challenges. 
+     I am also a knowledgeable
+     instructor, having taught Introduction to Operating Systems and other computer skills.</p>
 <a href="#contact"><button class="btn">Hire Me</button></a>
 
 </section>
@@ -108,28 +105,28 @@ reach out to me via the contact page.
 <i class="fas fa-graduation-cap"></i>
 <span>2019</span>
 <h3>Web Designer</h3>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+<p>GAHUZAMIRYANGO Jean de Dieu Okello, consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
     ? Fugiat, optio impedit incidunt similique architecto eos!</p>
 </div>
 <div class="box">
     <i class="fas fa-graduation-cap"></i>
     <span>2020</span>
     <h3>Frontend Developer</h3>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+    <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
         ? Fugiat, optio impedit incidunt similique architecto eos!</p>
     </div>
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2021</span>
         <h3>AWS Solutions Architect</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+        <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
             </p>
         </div>
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2023</span>
             <h3>Fullstack Developer</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+            <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
                 </p>
             </div>
         </div>
@@ -197,7 +194,7 @@ reach out to me via the contact page.
     <div class="card-body">
     <h5 class="card-title">E-commerce platform</h5>
     <p class="card-text">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum totam ut ipsam molestias 
+        GAHUZAMIRYANGO Jean de Dieu Okello, consectetur adipisicing elit. Earum totam ut ipsam molestias 
     vitae non officiis. Ea voluptatem voluptas obcaecati ipsam nam accusantium commodi distin
     ctio! Beatae consequatur ea voluptate animi.</p>
     <span class="btn-span"><a href="blog.html" class="btn">Learn more</a></span>
@@ -210,7 +207,7 @@ reach out to me via the contact page.
         <div class="card-body">
         <h5 class="card-title">E-commerce platform</h5>
         <p class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum totam ut ipsam molestias 
+            GAHUZAMIRYANGO Jean de Dieu Okello, consectetur adipisicing elit. Earum totam ut ipsam molestias 
         vitae non officiis. Ea voluptatem voluptas obcaecati ipsam nam accusantium commodi distin
         ctio! Beatae consequatur ea voluptate animi.</p>
         <span class="btn-span"><a href="./blog1.html" class="btn">Learn more</a></span>
