--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 <!-- Home section starts right here now---- -->
 <section class="home" id="home">
 <h3>Hi There!</h3>
-<h1>I'm <span>GAHUZAMIRYANGO Jean De Deu</span></h1>
+<h1>I'm <span>OKELLO De Deu</span></h1>
 <p>Gahuzamiryango Jean de Dieu,
     An experienced Developer, IT Consultant with a Bachelor’s degree in
      Business and Information Technology from the University of Rwanda and a strong 
@@ -251,9 +251,9 @@ reach out to me via the contact page.
             <h3 class="title">Contact Info:</h3>
         <div class="info">
         <h3><i class="fas fa-envelope"></i>gahuzaj12@gmail.com</h3>
-        <h3><i class="fas fa-phone"></i>+250 787994855</h3>
-        <h3><i class="fas fa-envelope"></i>+250 7879948552</h3>
-        <h3><i class="fas fa-phone"></i>Whatsapp: +250787994855</h3>
+        <h3><i class="fas fa-phone"></i>+250 784332503</h3>
+        <h3><i class="fas fa-envelope"></i>+250 721839207</h3>
+        <h3><i class="fas fa-phone"></i>Whatsapp: +250784332503</h3>
         </div>
         </div>
         <form action="">
