--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 <!-- Home section starts right here now---- -->
 <section class="home" id="home">
 <h3>Hi There!</h3>
-<h1>I'm <span>OKELLO De Deu</span></h1>
+<h1>I'm <span>GAHUZAMIRYANGO Jean De Deu</span></h1>
 <p>Gahuzamiryango Jean de Dieu,
     An experienced Developer, IT Consultant with a Bachelor’s degree in
      Business and Information Technology from the University of Rwanda and a strong 
@@ -105,15 +105,21 @@ reach out to me via the contact page.
 <i class="fas fa-graduation-cap"></i>
 <span>2019</span>
 <h3>Web Designer</h3>
-<p>GAHUZAMIRYANGO Jean de Dieu Okello, consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
-    ? Fugiat, optio impedit incidunt similique architecto eos!</p>
+<p>I am an experienced Web Developer and Trainer with a strong background in designing, developing, and maintaining web applications, as well as training students and professionals in modern web technologies. I have hands-on experience with HTML, CSS, JavaScript, React, Next.js, Tailwind CSS, and basic backend integration, focusing on building responsive, user-friendly, and efficient web solutions.
+
+As a trainer, I have successfully delivered both theoretical and practical lessons in web development and ICT-related subjects. I specialize in simplifying complex technical concepts, guiding learners through real-world projects, and mentoring students to develop problem-solving skills and confidence in programming. I also support learners in understanding networking basics, system concepts, and software development best practices.
+
+I am passionate about technology education, continuous learning, and helping students and teams grow by combining industry practices with effective teaching methodologies.</p>
 </div>
 <div class="box">
     <i class="fas fa-graduation-cap"></i>
     <span>2020</span>
     <h3>Frontend Developer</h3>
-    <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
-        ? Fugiat, optio impedit incidunt similique architecto eos!</p>
+    <p>GI am a skilled Front-End Developer and Trainer with experience in designing and developing responsive, user-friendly web interfaces using HTML, CSS, JavaScript, React, Next.js, and Tailwind CSS. I focus on translating UI/UX designs into high-performance, accessible, and visually appealing web applications.
+
+As a trainer, I have hands-on experience teaching front-end development concepts through structured lessons, practical coding exercises, and real-world projects. I guide learners in understanding core topics such as responsive design, component-based architecture, state management, version control, and best coding practices. I am passionate about helping students build confidence, problem-solving skills, and job-ready front-end development expertise.
+
+I combine technical development skills with effective teaching methodologies to deliver impactful learning experiences and high-quality front-end solutions.</p>
     </div>
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
