last updated comm

--- a/portfolio.html
+++ b/portfolio.html
@@ -117,22 +117,25 @@ I am passionate about technology education, continuous learning, and helping stu
     <h3>Frontend Developer</h3>
     <p>GI am a skilled Front-End Developer and Trainer with experience in designing and developing responsive, user-friendly web interfaces using HTML, CSS, JavaScript, React, Next.js, and Tailwind CSS. I focus on translating UI/UX designs into high-performance, accessible, and visually appealing web applications.
 
-As a trainer, I have hands-on experience teaching front-end development concepts through structured lessons, practical coding exercises, and real-world projects. I guide learners in understanding core topics such as responsive design, component-based architecture, state management, version control, and best coding practices. I am passionate about helping students build confidence, problem-solving skills, and job-ready front-end development expertise.
-
-I combine technical development skills with effective teaching methodologies to deliver impactful learning experiences and high-quality front-end solutions.</p>
+As a trainer, I have hands-on experience teaching front-end development concepts through structured lessons, practical coding exercises, and real-world projects. I guide learners in understanding core topics such as responsive design, component-based architecture, state management, version control, and best coding practices. I am passionate about helping students build confidence, problem-solving skills, and job-ready front-end development expertise.</p>
     </div>
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2021</span>
         <h3>AWS Solutions Architect</h3>
         <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+            
+
+I combine technical development skills with effective teaching methodologies to deliver impactful learning experiences and high-quality front-end solutions.
             </p>
         </div>
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2023</span>
             <h3>Fullstack Developer</h3>
-            <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, tempore in eius doloribus dolor
+            <p>GAHUZAMIRYANGO Jean de Dieu Okello, amet consectetur adipisicing elit. Unde mollitia voluptatem quisquam autem, obcaecati consectetur quibusdam temporibus tempora, 
+
+I combine technical development skills with effective teaching methodologies to deliver impactful learning experiences and high-quality front-end solutions.tempore in eius doloribus dolor
                 </p>
             </div>
         </div>
